# rust-xs-evaluation

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  README_en.md
benchmark/: Cargo.toml
benchmark/src/: lib.rs
doc/: build.md
tests/add/: Cargo.toml  justfile
tests/add/src/: entry.asm  main.rs
tests/am_cachetests/: Cargo.toml  justfile
tests/am_cachetests/.cargo/: config.toml
tests/am_cachetests/src/: main.rs
tests/am_cachetests/src/cachetests/: access.rs  mod.rs
tests/am_cputests/: Cargo.toml  README.md  justfile  linker.ld  logo.txt
tests/am_cputests/.cargo/: config.toml
tests/am_cputests/src/: device.rs  entry.asm  main.rs
tests/am_cputests/src/cputests/: add.rs  add_u64.rs  bit.rs  bubble_sort.rs  div.rs  load_store.rs  mod.rs  mul_u64.rs
tests/async_test/: Cargo.toml  build.rs  justfile
tests/async_test/src/: main.rs
tests/traptest/: Cargo.toml  justfile  memory.x
tests/traptest/src/: device.rs  main.rs
xs-core/: Cargo.toml  build.rs  justfile  link.x
xs-core/.cargo/: config.toml
xs-core/src/: main.rs
xs-hal/: .gitignore  Cargo.toml  README.md
xs-hal/src/: lib.rs
xs-rt/: Cargo.toml  README.md  build.rs  link.x
xs-rt/example/: Cargo.toml  memory.x
xs-rt/example/src/: main.rs
xs-rt/macros/: Cargo.toml
xs-rt/macros/src/: lib.rs
xs-rt/src/: lib.rs
