[package]
name = "xs-hal"
version = "0.1.0"
authors = ["SKTT1Ryze <linuxgnulover@gmail.com>"]
edition = "2018"
keywords = ["XiangShan", "riscv", "embedded-hal"]
repository = "https://github.com/SKTT1Ryze/rust-xs-evaluation/tree/main/xs-hal"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tock-registers = "0.6.0"
ansi_rgb = "0.2.0"
