[package]
name = "xs-rt"
version = "0.1.0"
authors = ["hustccc <1276675421@qq.com>"]
edition = "2018"
description = "Minimal runtime / startup for XiangShan CPU's"
keywords = ["riscv", "runtime", "startup"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r0 = "1.0.0"
riscv = "0.6"
xs-rt-macros = { path = "macros" }

[features]
inline-asm = ["riscv/inline-asm"]

[dev-dependencies]
panic-halt = "0.2.0"
