[package]
name = "am_cachetests"
version = "0.1.0"
authors = ["hustccc <1276675421@qq.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rust-embedded/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.6.0"
r0 = "1.0"
benchmark = { path = "../../benchmark" }
xs-hal = { path = "../../xs-hal" }