[package]
name = "am_cputests"
version = "0.1.0"
authors = ["SKTT1Ryze <linuxgnulover@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rust-embedded/riscv", features = ["inline-asm"] }
bit = "0.1.1"
buddy_system_allocator = "0.6.0"
r0 = "1.0"
benchmark = { path = "../../benchmark" }
xs-hal = { path = "../../xs-hal" }
ansi_rgb = "0.2.0"
